package pt.ipp.isep.dei.esoft.project.repository;

import pt.ipp.isep.dei.esoft.project.application.session.ApplicationSession;

public class Repositories {

    private static Repositories instance;
    private final OrganizationRepository organizationRepository;
    private final TaskCategoryRepository taskCategoryRepository;
    private final AuthenticationRepository authenticationRepository;
    private final JobRepository JobRepository;
    private final CollaboratorRepository CollaboratorRepository;
    private final SkillRepository skillRepository; // Adicionando o SkillRepository

    private Repositories() {
        organizationRepository = new OrganizationRepository();
        taskCategoryRepository = new TaskCategoryRepository();
        authenticationRepository = new AuthenticationRepository();
        JobRepository = new JobRepository();
        CollaboratorRepository = new CollaboratorRepository();
        skillRepository = new SkillRepository();
    }

    public static Repositories getInstance() {
        if (instance == null) {
            synchronized (Repositories.class) {
                instance = new Repositories();
            }
        }
        return instance;
    }

    public OrganizationRepository getOrganizationRepository() {
        return organizationRepository;
    }

    public TaskCategoryRepository getTaskCategoryRepository() {
        return taskCategoryRepository;
    }

    public AuthenticationRepository getAuthenticationRepository() {
        return authenticationRepository;
    }
    public JobRepository getJobRepository() {return JobRepository;}
    public CollaboratorRepository getCollaboratorRepository() {return CollaboratorRepository;}
    public SkillRepository getSkillRepository(){return skillRepository;}
}