@startuml

'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class ApplicationSession
{
    + static getInstance()
    + getCurrentSession()
}

class UserSession
{
    + getUserEmail()
}



class Skill {
    - skillName

    + addSkill(skill: Skill)
}

class SkillRepository{
    - List<Skill> skills

    + void addSkill(skillName: String)
    + void removeSkill(skillName: String)
    + void updateSkill(skillNameOld: String, skillNameNew: String)
    + Skill getSkill(skillName: String)
}

class RegisterSkillUI {
}

class Repositories{
    - SkillRepository skillRepository

    + SkillRepository getSkillRepository()
}

class RegisterSkillController {
    + RegisterSkillController( skillRepository)
    + updateSkill(skillNameOld: String, skillNameNew: String)
    + removeSkill(skillName: String)
}

Repositories -> Repositories : instance
ApplicationSession -> ApplicationSession : instance

RegisterSkillUI .> RegisterSkillController

RegisterSkillController .> Repositories : repositories

Repositories -> "1" SkillRepository

RegisterSkillController ..> Skill : skill
RegisterSkillController ..> SkillRepository : SkillRepository

' Legenda
SkillRepository --> Skill : Skills

ApplicationSession --> "1" UserSession : userSession


RegisterSkillController ..> ApplicationSession
RegisterSkillController ..> UserSession




@enduml
